0026671: Infinite loop in ShapeFix_Wire::FixSelfIntersection()

Avoid possible infinite loops in ShapeFix_Wire::FixSelfIntersection() -- when needed, fix is repeated once instead of going back in the loop